config/base/hasura/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasura
spec:
  ports:
    - port: 8080
      targetPort: http
      name: http
  selector:
    app: hasura
