config/base/hasura/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hasura-ingress
  annotations:
    nginx.ingress.kubernetes.io/server-alias: 'hasura.local.ii.coop, hasura.local.ii.nz, hasura.local.sharing.io'
spec:
  rules:
    - host: local.hasura.nhost.run
      http:
        paths:
          - path: /
            backend:
              serviceName: hasura
              servicePort: 8080
